--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Compiler files
-cache/
-out/
+cache
+out
+node_modules
 
 # Ignores development broadcast logs
 !/broadcast
@@ -12,3 +13,6 @@ docs/
 
 # Dotenv file
 .env
+package-lock.json
+yarn-lock.json
+pnpm-lock.yaml
