--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,37 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["lib"]
+script = "script"
+test = "test"
+oprimizer = true
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[etherscan]
+mainet = {key="${API_KEY_ETHERSCAN}"}
+arbitrum = {key = "${API_KEY_ARBISCAN}"}
+bsc = {key="${API_KEY_BSCSCAN}"}
+base = {key="${API_KEY_BASESCAN}"}
+polygon = {key="${API_KEY_POLYGONSCAN}"}
+avalanche = {key = "${API_KEY_SNOWTRACE}"}
+#testnet
+eth_sepolia = {key="${API_KEY_ETHERSCAN}"}
+arbitrum_sepolia = {key="${API_KEY_ARBISCAN}"}
+bsc_test = {key="${API_KEY_BSCSCAN}"}
+base_sepolia = {key="${API_KEY_BASESCAN}"}
+polygon_amoy = {key="${API_KEY_POLYGONSCAN}"}
+avalanche_fuji = {key = "${API_KEY_SNOWTRACE}"}
+
+
+[rpc_endpoints]
+  mainnet = "https://eth-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+  arbitrum = "https://arb-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+  bsc = ""
+  base = "https://base-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+  polygon = "https://polygon-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+  avalanche = "https://avalanche-mainnet.infura.io/v3/${API_KEY_INFURA}"
+  #testnet
+  eth_sepolia = "https://eth-sepolia.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+  arbitrum_sepolia = "https://arb-sepolia.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+  bsc_test = ""
+  base_sepolia = "https://base-sepolia.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+  polygon_amoy = "https://polygon-amoy.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+  avalanche_fuji = "https://avalanche-fuji.infura.io/v3/${API_KEY_INFURA}"
