--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,5 @@ API_KEY_BSCSCAN = "your API_KEY_BSCSCAN"
 API_KEY_BASESCAN = "your API_KEY_BASESCAN"
 API_KEY_POLYGONSCAN = "your API_KEY_POLYGONSCAN"
 API_KEY_SNOWTRACE = "your API_KEY_SNOWTRACE"
+
+PRIVATE_KEY = "your private key"
