--- a/.env.template
+++ b/.env.template
@@ -6,6 +6,8 @@ API_KEY_ARBISCAN = "your API_KEY_ARBISCAN"
 API_KEY_BSCSCAN = "your API_KEY_BSCSCAN"
 API_KEY_BASESCAN = "your API_KEY_BASESCAN"
 API_KEY_POLYGONSCAN = "your API_KEY_POLYGONSCAN"
+API_KEY_BLASTSCAN = "your API_KEY_BLASTSCAN"
 API_KEY_SNOWTRACE = "your API_KEY_SNOWTRACE"
+API_KEY_OPTIMISMSCAN = "your API_KEY_OPTIMISMSCAN"
 
 PRIVATE_KEY = "your private key"
